...
            ) {
                CircularProgressIndicator(color = OrangePrimary)
            }
        } else {
            recipes?.let { list ->
                LazyColumn(
                    modifier = Modifier.testTag("TestTagDiscoverList")
                ) {
                    items(list) { recipe ->
                        RecipeRow(
                            recipe = recipe,
                            selectedCategory = selectedCategory,
                            onClick = { navigation.navigateToFoodDetail(recipe.id!!) }
...
