...
        }

        item {
            OutlinedTextField(
                value = state.query,
                onValueChange = onQueryChange,
                modifier = Modifier.fillMaxWidth().testTag("TestTagSearchInput"),
                placeholder = { Text("Pasta") },
                leadingIcon = {
                    Icon(Icons.Outlined.Search, contentDescription = null)
                },
                singleLine = true,
                shape = RoundedCornerShape(20.dp)
...
    val background =
        if (selected) BlueLightTile else CardBackground

    Card(
        modifier = Modifier
            .padding(vertical = halfMargin())
            .testTag("TestTagSearchNone")
            .fillMaxWidth()
            .clickable { onClick() },
        shape = RoundedCornerShape(16.dp),
        colors = CardDefaults.cardColors(containerColor = background),
        elevation = CardDefaults.cardElevation(1.dp)
    ) {
...
